--- a/test-e2e/index.html
+++ b/test-e2e/index.html
@@ -17,5 +17,6 @@
 </head>
 <body ng-app="ngResourceExplorerTest" ng-controller="ngResourceExplorerTestCtrl as vm">
     <resource-explorer resource="vm.resource" action="get"></resource-explorer>
+    <http-explorer config="vm.http"></http-explorer>
 </body>
 </html>
